--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,18 @@
 {
-  "name": "baze-soundboard",
-  "authors": [
-    "Max Bachhuber <bahuma20@bahuma.io>"
-  ],
-  "description": "",
-  "main": "",
-  "moduleType": [],
+  "name": "angular-seed",
+  "description": "A starter project for AngularJS",
+  "version": "0.0.0",
+  "homepage": "https://github.com/angular/angular-seed",
   "license": "MIT",
-  "homepage": "",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "private": true,
   "dependencies": {
+    "angular": "~1.4.0",
+    "angular-route": "~1.4.0",
+    "angular-loader": "~1.4.0",
+    "angular-mocks": "~1.4.0",
     "material-design-lite": "~1.1.2",
-    "handlebars": "~4.0.5"
+    "firebase": "~2.4.1",
+    "angularfire": "~1.1.4",
+    "angular-audio": "~1.7.1"
   }
 }
