--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,6 @@
     "material-design-lite": "~1.1.2",
     "firebase": "~2.4.1",
     "angularfire": "~1.1.4",
-    "angular-audio": "~1.7.1"
+    "dialog-polyfill": "~0.4.3"
   }
 }
